LIVIJUKU-475 Hakemuksen liitteiden kirjoitusasun muutos (tiloissa, joissa hakemus ei ole editoitavissa)

--- a/app/scripts/components/liiteTarkistaminen/index.html
+++ b/app/scripts/components/liiteTarkistaminen/index.html
@@ -1,25 +1,33 @@
 <div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2 class="panel-title">Liitetiedostot</h2>
-            </div>
-            <div class="panel-body">
-                <div class="col-md-12">
-                    <div ng-show="liitteetOlemassa()" class="response">
-                        <div class="sel-file" ng-repeat="l in liitteet">
-                            <p>
-                                <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank"><span
-                                        class="glyphicon glyphicon-file"></span>{{l.nimi}}
-                                    ({{l.contenttype}})</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div ng-hide="liitteetOlemassa()">
-                        <p>Ei liitteitä.</p>
-                    </div>
-                </div>
-            </div>
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title">Liitetiedostot</h2>
+      </div>
+      <div class="panel-body">
+        <div class="col-md-12">
+          <div ng-show="liitteetOlemassa()">
+            <juku-file-details ng-repeat="l in liitteet">
+              <juku-icon-link ng-show="isPdf(l.nimipaate)"
+                              href="{{getLiitePdf(hakemusid,l.liitenumero)}}"
+                              target="_blank"
+                              icon="file">
+                {{l.nimiteksti}}.{{l.nimipaate}}
+              </juku-icon-link>
+              <juku-icon-link ng-hide="isPdf(l.nimipaate)"
+                              href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}"
+                              target="_blank"
+                              icon="file">
+                {{l.nimiteksti}}.{{l.nimipaate}}
+              </juku-icon-link>
+              <span>{{formatFileSize(l.bytesize)}}</span>
+            </juku-file-details>
+          </div>
+          <div ng-hide="liitteetOlemassa()">
+            <p>Ei liitteitä.</p>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
