--- a/app/scripts/components/liiteLataus/index.html
+++ b/app/scripts/components/liiteLataus/index.html
@@ -103,14 +103,19 @@
             </div>
           </div>
           <div ng-hide="hakemusKeskenerainen() && sallittu('modify-oma-hakemus')">
-            <juku-icon-link ng-show="isPdf(liite.nimipaate)" icon="file"
-                            href="{{getLiitePdf(hakemusid,liite.liitenumero)}}" target="_blank">
-              {{liite.nimi}} ({{liite.contenttype}})
+            <juku-icon-link ng-show="isPdf(liite.nimipaate)"
+                            href="{{getLiitePdf(hakemusid,liite.liitenumero)}}"
+                            target="_blank"
+                            icon="file">
+              {{liite.nimiteksti}}.{{liite.nimipaate}}
             </juku-icon-link>
-            <juku-icon-link ng-hide="isPdf(liite.nimipaate)" icon="file"
-                            href="api/hakemus/{{hakemusid}}/liite/{{liite.liitenumero}}" target="_blank">
-              {{liite.nimi}} ({{liite.contenttype}})
+            <juku-icon-link ng-hide="isPdf(liite.nimipaate)"
+                            href="api/hakemus/{{hakemusid}}/liite/{{liite.liitenumero}}"
+                            target="_blank"
+                            icon="file">
+              {{liite.nimiteksti}}.{{liite.nimipaate}}
             </juku-icon-link>
+            <span>{{formatFileSize(liite.bytesize)}}</span>
           </div>
         </juku-file-details>
         <div ng-show="hakemusKeskenerainen() && sallittu('modify-oma-hakemus')" class="alert alert-info">
