Avustuskohteiden yhteensä tiedon otsikko ei riipu käyttäjän roolista vaan ainoastaan hakemuksen tyypistä: - ah0 - HAETTAVA VALTIONAVUSTUS YHTEENSÄ: - mh - HAETTAVAT MAKSATUKSET YHTEENSÄ:

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -189,7 +189,7 @@
       <div class="row">
         <div class="col-md-9">
           <h4>
-            {{ hakemus.hakemustyyppitunnus === 'AH0' || isHakija(user) ?
+            {{ hakemus.hakemustyyppitunnus === 'AH0' ?
             'HAETTAVA VALTIONAVUSTUS YHTEENSÄ:' :
             'HAETTAVAT MAKSATUKSET YHTEENSÄ:'
             }}
