LIVIJUKU-476 Päätöksenteko-näkymän "päätösteksti"-osion selkeyttäminen

--- a/app/scripts/views/kasittelija/paatos.html
+++ b/app/scripts/views/kasittelija/paatos.html
@@ -128,8 +128,7 @@
           </button>
 
           <button data-ng-click="naytaPaatos()" ng-disabled="!hasPaatos() && !hakemusTarkastettu()"
-                  class="pull-right btn btn-primary">{{hakemusTarkastettu() ? "Tallenna ja esikatsele päätös" : "Näytä
-            päätös"}}
+                  class="pull-right btn btn-primary">{{hakemusTarkastettu() ? "Tallenna ja esikatsele päätös" : "Näytä päätös"}}
           </button>
 
           <button data-ng-click="tallennaPaatos(0)" class="pull-right btn btn-primary disabled-button-tooltip"
