LIVIJUKU-485 Hakemuslomake: Liitteen nimen muuttaminen - tekstilaatikon pidentäminen

--- a/app/scripts/components/liiteLataus/index.html
+++ b/app/scripts/components/liiteLataus/index.html
@@ -60,7 +60,7 @@
             <div ng-show="liite.liitenumero === editoitavaLiite">
               <ng-form name="liiteRiviForm">
                 <span class="glyphicon glyphicon-file"></span>
-                <input name="liitenimi" type="text" class="input-small" noenter
+                <input name="liitenimi" type="text" class="input400" noenter
                        ng-model="liite.nimiteksti"
                        ng-focus="asetaLiitenimi(liite.nimiteksti)"
                        ui-validate="{tyhja: 'liiteNimiOk($value)' }"/>
