--- a/app/scripts/components/liiteLataus/index.styl
+++ b/app/scripts/components/liiteLataus/index.styl
@@ -1,7 +1,8 @@
 .liitelataus
   .ng-invalid-tyhja
-    color: #a94442;
-    border-color: #a94442;
-
+    color: #a94442
+    border-color: #a94442
+  .input400
+    width: 400px
 [ngf-select]
   bottom: 0
