LIVIJUKU-456 Seurantalomakkeiden toteutus maksatushakemuksille

--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -6,45 +6,45 @@
         <th class="col-md-2">Suoritteen nimi</th>
         <th>
           <div tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
-               tooltip-append-to-body="true">Linja-autot
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Linja-autot&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
           <div tooltip="Taksien lukumäärä" tooltip-placement="top"
-               tooltip-append-to-body="true">Taksit
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Taksit&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
           <div tooltip="Paikallisliikenteen ajokilometrit"
-               tooltip-append-to-body="true">Ajokilometrit
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Ajo&shy;matkat&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
           <div tooltip="Paikallisliikenteen matkustajamäärä" tooltip-placement="top"
-               tooltip-append-to-body="true">Matkustaja-määrä
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Matkus&shy;tajat&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
           <div tooltip="Saadut matkalipputulot" tooltip-placement="top"
-               tooltip-append-to-body="true">Lipputulo
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Lippu&shy;tulo&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
           <div tooltip="Kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
                tooltip-placement="top"
-               tooltip-append-to-body="true">Netto&shy;hinta
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Netto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
           <div tooltip="Lipputulo + nettohinta" tooltip-placement="top"
-               tooltip-append-to-body="true">Brutto&shy;hinta
-            <span class="glyphicon glyphicon-question-sign"></span>
+               tooltip-append-to-body="true">
+            Brutto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th ng-hide="isReadonly()">Toiminnot</th>
