LIVIJUKU-473: Tunnuslukuraportointi tekninen demo viimeistely

--- a/app/scripts/components/tunnusluvut/kysynta/index.html
+++ b/app/scripts/components/tunnusluvut/kysynta/index.html
@@ -3,7 +3,7 @@
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
         <tr>
-          <th class="col-md-7 ekarivi">Nousijat keskimääräisenä talven arkipäivänä/lauantaina/sunnuntaina</th>
+          <th class="col-md-7 ekarivi">Talviliikenteen (syyskuu-toukokuu) keskimääräinen päiväkohtainen nousumäärä</th>
           <th class="col-md-1 ekarivi">Nousua/päivä</th>
           <th class="col-md-4 ekarivi">Vapaat kommentit</th>
         </tr>
