--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -8,5 +8,10 @@
   <juku-form-row>
     <juku-tunnusluvut-kysynta></juku-tunnusluvut-kysynta>
   </juku-form-row>
-
+  <juku-form-row>
+    <h3>Tarjotun liikenteen tunnusluvut</h3>
+  </juku-form-row>
+  <juku-form-row>
+    <juku-tunnusluvut-tarjonta></juku-tunnusluvut-tarjonta>
+  </juku-form-row>
 </div>
