--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -35,3 +35,4 @@
 @import '../scripts/components/controls'
 @import '../scripts/components/navigationLinks'
 @import '../scripts/components/tunnusluvut/kysynta'
+@import '../scripts/components/tunnusluvut/tarjonta'
