LIVIJUKU-473: Tunnuslukujensyöttö tekninen demo viimeistely

--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -1,12 +1,14 @@
 <div class="container">
-  <juku-tabs>
-    <juku-tab
-      ng-repeat="tyyppi in tunnuslukutyypit"
-      selected="isTabSelected(tyyppi)"
-      ng-click="toApplication(tyyppi)">
-      {{ tyyppi }}
-    </juku-tab>
-  </juku-tabs>
+  <juku-navigation>
+    <juku-tabs>
+      <juku-tab
+        ng-repeat="tyyppi in constants.tunnuslukuTyypit"
+        selected="isTabSelected(tyyppi)"
+        ng-click="toApplication(tyyppi)">
+        {{ tyyppi | toStatisticName }}
+      </juku-tab>
+    </juku-tabs>
+  </juku-navigation>
   <juku-form-row>
     <h2>PSA bruttosopimusliikenteen tunnusluvut</h2>
   </juku-form-row>
